- Added some methods to context:
    - setStrictMode( strictMode ). Set the value of strictMode (default value is false). If it is set to true all variables must be declared; if ZPT-JS finds a non declared variable in an expression an error occurs.
    - isStrictMode(). Get the value of strictMode.
    - Variable expression must match a regular expression. It is defined by zpt.context.getConf().variableNameRE and it is /^[A-Za-z0-9_/-]+$/ by default.

New in 0.34.0
- Now exists expression returns true when the path expressions following its expression returns a value and it is not undefined. It is false when the path expression cannot locate an object or if it evaluates to undefined.
- Some exports added:
    - exports.I18nBundle
    - exports.expressionBuilder
    - exports.evaluateHelper
    - exports.ExpressionTokenizer
- Name of tags simplified. The new name of attributes are:
    - talCondition:     "data-condition"
    - talRepeat:        "data-repeat"
    - talAttributes:    "data-attributes"
    - talContent:       "data-content"
    - talDefine:        "data-define"
    - talOmitTag:       "data-omit-tag"
    - talReplace:       "data-replace"
    - talOnError:       "data-on-error"
    - metalDefineMacro: "data-define-macro"
    - metalUseMacro:    "data-use-macro"
    - metalDefineSlot:  "data-define-slot"
    - metalFillSlot:    "data-fill-slot"
    - i18nDomain:       "data-domain"
    - i18nLanguage:     "data-language"

New in 0.33.0
- Added support of folder dictionaries.
- Added nothing and default variables to all scopes. Added support of them to data-tcontent, data-treplace and data-trepeat. Added support of nothing to data-ton-error.
- Added support of structure to data-tcontent, data-ton-error and data-treplace.

New in 0.32.1
- Bug fixed: contents of metalFillSlot must not be evaluated.

New in 0.32.0
- New configuration option added: dictionaryExtension.

New in 0.31.1
- Bug fixed: malformed auto define tag in autoDefineHelper in some cases.
